--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,11 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="go.and.fast.com.fastandgo.mainMenu.MainMenu">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Main.Menu.ActionBar">
+
+        <TextView
+            android:id="@+id/ActionBarTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="false"
+            android:layout_centerHorizontal="false"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="false"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:fontFamily="casual"
+            android:padding="10dp"
+            android:text="@string/app_name"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/ActionBarTitle"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:maxHeight="20dp"
+            android:minHeight="20dp"
+            android:padding="10dp"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_supervisor_account_black_24dp" />
+
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,19 +56,20 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/food_layout"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:alpha="0.8"
-                android:background="@drawable/fastfood"
-                android:orientation="horizontal">
+                android:alpha="0.9"
+                android:background="@drawable/fastfood">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/margin"
+                    android:layout_alignParentBottom="true"
                     android:layout_weight="1"
+                    android:alpha="0.7"
+                    android:background="@android:color/black"
                     android:orientation="horizontal">
 
                     <TextView
@@ -36,119 +77,132 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/fast_food"
+                        android:fontFamily="@font/chunkfive"
+                        android:padding="10dp"
+                        android:text="@string/food"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/shopping_layout"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:alpha="0.8"
-                android:background="@drawable/shopping"
-                android:orientation="horizontal">
+                android:alpha="0.9"
+                android:background="@drawable/shopping">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_weight="1"
+                    android:alpha="0.7"
+                    android:background="@android:color/black"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/shopping_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin"
                         android:layout_weight="1"
+                        android:fontFamily="@font/chunkfive"
+                        android:padding="10dp"
                         android:text="@string/shopping"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/transpo_layout"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:alpha="0.8"
-                android:background="@drawable/transportation"
-                android:orientation="vertical">
+                android:alpha="0.9"
+                android:background="@drawable/transportation">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:alpha="0.7"
+                    android:background="@android:color/black"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/transpo_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin"
+                        android:fontFamily="@font/chunkfive"
+                        android:padding="10dp"
                         android:text="@string/transport"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/payment_layout"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:alpha="0.8"
-                android:background="@drawable/billpayment"
-                android:orientation="horizontal">
+                android:alpha="0.9"
+                android:background="@drawable/billpayment">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:textAlignment="center">
+                    android:alpha="0.7"
+                    android:background="@android:color/black"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/payment_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin"
                         android:layout_weight="1"
+                        android:fontFamily="@font/chunkfive"
+                        android:padding="10dp"
                         android:text="@string/bills_payment"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/medicine_layout"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:alpha="0.8"
-                android:background="@drawable/medicine"
-                android:orientation="horizontal">
+                android:alpha="0.9"
+                android:background="@drawable/medicine">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:layout_weight="1"
+                    android:alpha="0.7"
+                    android:background="@android:color/black"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/medicine_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/margin"
                         android:layout_weight="1"
+                        android:fontFamily="@font/chunkfive"
+                        android:padding="10dp"
                         android:text="@string/medicines"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/text_size" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
