--- a/app/src/main/res/layout/activity_service_screen.xml
+++ b/app/src/main/res/layout/activity_service_screen.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -37,7 +37,16 @@
             android:text="@string/food"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="22sp" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/imageView"
+            android:background="@color/colorPrimary"
+            android:tint="@android:color/white"
+            widget:srcCompat="@drawable/ic_shopping_cart_black_24dp" />
 
         <ImageView
             android:id="@+id/imageView"
