--- a/app/src/main/res/layout/service_menu_list.xml
+++ b/app/src/main/res/layout/service_menu_list.xml
@@ -75,7 +75,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srb_clearRatingEnabled="true"
-                        app:srb_isIndicator="false"
+                        app:srb_isIndicator="true"
                         app:srb_scrollable="true"
                         app:srb_starHeight="18dp"
                         app:srb_starPadding="10dp"
