--- a/app/src/main/res/layout/activity_main_menu_screen.xml
+++ b/app/src/main/res/layout/activity_main_menu_screen.xml
@@ -29,7 +29,7 @@
             android:text="@string/app_name"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="22sp" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -44,6 +44,18 @@
             android:padding="10dp"
             android:tint="@android:color/white"
             app:srcCompat="@drawable/ic_supervisor_account_black_24dp" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/imageView2"
+            android:background="@color/colorPrimary"
+            android:maxHeight="20dp"
+            android:maxWidth="20dp"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_shopping_cart_black_24dp" />
 
     </RelativeLayout>
 
