--- a/app/src/main/res/layout/service_menu_filter_list.xml
+++ b/app/src/main/res/layout/service_menu_filter_list.xml
@@ -7,11 +7,11 @@ android:layout_margin="10dp"
 android:background="@drawable/filter_bg"
 android:orientation="horizontal">
 
-<TextView
-    android:id="@+id/filterTxt"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:padding="10dp"
-    android:textColor="@android:color/black" />
+    <TextView
+        android:id="@+id/filterTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:textColor="@android:color/white" />
 </LinearLayout>
